unpackaged/main/default/objects/SalesAgentSalesOfficeLink__c/SalesAgentSalesOfficeLink__c.object-meta.xml
<CustomObject>
    <label>Sales Agent Sales Office Relationship</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Agent Sales Office Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>