unpackaged/main/default/objects/SalesAgentSalesOfficeLink__c/fields/Sales_Office__c.field-meta.xml
<CustomField>
        <fullName>Sales_Office__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sales Office</label>
        <referenceTo>Sales_Office__c</referenceTo>
        <relationshipLabel>Sales Agent Sales Office Relationships</relationshipLabel>
        <relationshipName>Sales_Agent_Sales_Office_Relationships</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </CustomField>